initial commit of giraph for benchmarking.